--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ google_analytics: "UA-46465113-2"
 # UI configs
 title: "Photography of Steven Ban"
 subtitle: "See the many faces of Steven Ban!"
-author: "David Ban"
+author: "by David Ban"
 header:
  title: "Steven"
  subtitle: " by David Ban"
