--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ subtitle: "See the many faces of Steven Ban!"
 author: "by David Ban"
 header:
  title: "Steven"
- subtitle: " by David Ban"
+ subtitle: "David Ban"
 footer:
  name: "Hey there, my name is Steven"
  bio: "I am a man who makes many faces"
